--- a/book-blog/CSS/blog.css
+++ b/book-blog/CSS/blog.css
@@ -1,28 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import "./footer.css";
+@import "./layout.css";
 
-.light {
-	--mainColor: #64bcf4;
-	--hoverColor: #5bacdf;
-	--backgroundColor: #f1f8fc;
-	--darkOne: #312f3a;
-	--darkTwo: #45424b;
-	--lightBlue: #abd9e9;
-	--lightTwo: #aaa;
-}
-
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body{
-	font-family: "Poppins", sans-serif;
-    background-color: var(--backgroundColor);
-}
-  
   /* Header/Blog Title */
   #img-head {
     width: 100%;
@@ -56,6 +35,7 @@ body{
     height: 450px;
     image-rendering: pixelated;
   }
+  
   #imgs {
     width: 100%;
     height: 200px;
@@ -82,14 +62,14 @@ body{
     text-decoration: underline;
   }
 
-  /* Footer */
-  .footer {
+  .blog-article {
+    grid-area: bg;
+    height: auto;
     padding: 20px;
     text-align: center;
-    background: #ddd;
-    margin-top: 20px;
+    margin: 20px;
   }
-  
+
   /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 800px) {
     .leftcolumn, .rightcolumn {   
