--- a/weather-journal-app/website/style.css
+++ b/weather-journal-app/website/style.css
@@ -1,6 +1,8 @@
 body{
-    background: #fffff8;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    background-image: url('https://images.pexels.com/photos/3617500/pexels-photo-3617500.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: sans-serif;
 }
 
 #app{
@@ -8,7 +10,6 @@ body{
     grid-auto-rows: minmax(150px, auto);
     /* grid-template-columns:  */
     height:100%;
-    background: #f23557;
     color: #f0d43a;
     justify-content: center;
     grid-gap: 1em;
@@ -20,35 +21,8 @@ body{
     margin-bottom: 100px;
 }
 
-.holder{
-
-}
-
 .entry{
-    background: rgba(59, 74, 107, .4);
-}
-
-#entryHolder{
-
-}
-
-#date{
-
-}
-
-#temp{
-
-}
-
-#content{
-
-}
-
-.headline {
-
-}
-.title{
-
+    background-color: rgba(59, 74, 107, .4);
 }
 
 /*  Basic Styling To Override Default For Basic HTML Elements */
@@ -61,7 +35,7 @@ input{
     display:block;
     height: 60px;
     width: 320px;
-    background:#22b2da;
+    background-color:#22b2da;
     color: #f0d43a;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
@@ -69,21 +43,26 @@ input{
 }
 
 button{
-    width: 400px;
+    width: 320px;
     height: 100px;
-    background: #3b4a6b;
+    background-color: #75197c;
     color: #f0d43a;
     font-size: 26px;
     font-family: 'Oswald', sans-serif;
     border: none;
     box-shadow: 2px 4px 5px #444;
+    border-radius: 10px;
+}
+
+button:hover {
+    background-color: cadetblue;
 }
 h1{
     font-size: 36px;
 }
 
 textarea{
-    background:#22b2da;
+    background-color:#22b2da;
     color: #f0d43a;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
